--- a/config/r3live_config.yaml
+++ b/config/r3live_config.yaml
@@ -19,23 +19,26 @@ r3live_vio:
    image_width: 1280
    image_height: 1024
    camera_intrinsic:
-      [863.4241, 0.0, 640.6808,
-      0.0,  863.4171, 518.3392,
-      0.0, 0.0, 1.0 ] 
-   camera_dist_coeffs: [-0.1080, 0.1050, -1.2872e-04, 5.7923e-05, -0.0222]  #k1, k2, p1, p2, k3
+      [923.174744, 0.0,      636.617,
+                0.0,     923.510071,  370.753418,
+                0.0,     0.0,      1.0     ]
+   camera_dist_coeffs: [0 , 0, 0, 0, 0]  #k1, k2, p1, p2, k3
    # Fine extrinsic value. form camera-LiDAR calibration.
    camera_ext_R:
-         [-0.00113207, -0.0158688, 0.999873,
-            -0.9999999,  -0.000486594, -0.00113994,
-            0.000504622,  -0.999874,  -0.0158682]
+         [0.00433701, -0.999814, 0.0188181, 
+          -0.000481115, -0.0188162, -0.999823, 
+          0.99999, -0.00434529, -0.000399419]
    # camera_ext_t: [0.050166, 0.0474116, -0.0312415] 
-   camera_ext_t: [0,0,0] 
+   camera_ext_t: [-0.0375388, 0.0867586,  -0.0456878] 
    # Rough extrinsic value, form CAD model, is not correct enough, but can be online calibrated in our datasets.
    # camera_ext_R:
    #    [0, 0, 1,
    #     -1, 0, 0,
    #     0, -1, 0]
    # camera_ext_t: [0,0,0] 
+   #   data: [  -0.00433701, -0.999814, 0.0188181, -0.0375388, 
+   #        -0.000481115, -0.0188162, -0.999823, 0.0867586, 
+   #        0.99999, -0.00434529, -0.000399419, -0.0456878, 
    
 r3live_lio:        
    lio_update_point_step: 4   # Point step used for LIO update.  
